--- a/Article.tex
+++ b/Article.tex
@@ -24,7 +24,7 @@
 
 \begin{document}
 
-\title{Spatio-temporal coordination of the DNA Double Strand Break repair machinery in \emph{Escherichia coli}}
+\title{Spatio-temporal coordination of the DNA Double-Strand Break repair machinery in \emph{Escherichia coli}}
 \shorttitle{Spatio-temporal dynamics of the DSB repair machinery in \ecoli}
 
 \author[1]{Daniel Thédié}
@@ -48,7 +48,8 @@
 \end{keywords}
 
 \begin{corrauthor}
-    meriem.elkaroui\at ed.ac.uk
+    % meriem.elkaroui\at ed.ac.uk
+    meriem.el\_karoui\at\ ens-paris-saclay.fr
 \end{corrauthor}
 
 \input{Introduction}
@@ -64,7 +65,7 @@
 \end{funding}
 
 \begin{acknowledgements}
-    We would like to thank Prof. David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Prof. Mark Dillingham for sharing his knowledge on the biochemistry of RecBCD, and for gifting the Gam plasmid. We thank Prof. Johan Elf for kindly sharing the RecA-SYFP2 tandem fusion strain. We thank Dr. Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
+    We would like to thank Prof.\ David Leach for insightful discussions on DNA repair in \emph{E. coli}. We thank Prof.\ Mark Dillingham for sharing his knowledge on the biochemistry of RecBCD, and for gifting the Gam plasmid. We thank Prof.\ Johan Elf for kindly sharing the RecA-SYFP2 tandem fusion strain. We thank Dr.\ Jean Ollion for the development of BACMMAN and its associated tools, as well as the image analysis support he provided. We thank Elise Darmon for discussing results, and reviewing the manuscript.
 \end{acknowledgements}
 
 \begin{contributions}
